--- a/css/styles.css
+++ b/css/styles.css
@@ -114,14 +114,23 @@ h2 {
   border-top: 0.5px ridge rgba(0,0,0,.54);
 }
 
-  footer {
+footer {
     position: absolute;
     background: #f2f2f2;
     bottom: 0;
     width: 100%;
     line-height: 20px;
     vertical-align: center;
-  }
+}
+
+#searchPage footer {
+  position: relative;
+  background: #f2f2f2;
+  bottom: 0;
+  width: 100%;
+  line-height: 20px;
+  vertical-align: center;
+}
 
 #searchbar {
   font-size: 16px;
@@ -223,24 +232,22 @@ p {
 }
 
 .dropdown-img {
-  display: inline;
+  display: inline-block;
   height: 6px;
   width: 8px;
 
 }
 
 .results {
-  margin-left: 150px;
-  width: 600px;
-  display: inline-block;
+  display: block;
 }
 
-.results p {
+#searchPage p {
   font-weight: normal;
   text-align: left;
   font-size: 14px;
   padding-top: 1px;
-  line-height: 1.3;
+  line-height: 1.57;
 }
 
 .results h4:hover {
@@ -260,6 +267,7 @@ p {
 #searchPage h4 {
   display: inline-block;
   padding-bottom: 6px;
+  font-size: 14px;
 }
 
 #link-div {
@@ -274,23 +282,33 @@ strong {
   position: absolute;
   display: inline-block;
   margin-left: 50px;
-  border: 1.3px solid #dfe1e5;
+  border: 1.0px solid #dfe1e5;
   border-radius: 7px;
   overflow: hidden;
   max-width: 470px;
+  max-height: 400px;
   
+}
+
+.all-results {
+  display: inline-block;
+  margin-left: 150px;
+  width: 600px;
 }
 
 #imagebox {
   width: 470px;
-  max-height: 200px;
+  height: 200px;
   padding-bottom: 20px;
-  line-height: 0px;
+  line-height: 1.5px;
+  text-align: left;
+  border: 1.0px solid #dfe1e5;
   
 }
 
 #bigApple {
   display:inline-block;
+  margin-bottom: 16px;
 }
 
 #smallApple {
@@ -300,18 +318,33 @@ strong {
   max-height: 220px;
 }
 
-#searchPage h1 {
+#bigApple h1 {
   color: #000;
   line-height: 1.2;
   font-size: 30px;
   font-weight: normal;
-  margin: 10px 0 10px 10px;
+  margin: 10px 0 10px 10px;;
 }
 
-#searchPage h5 {
+#bigApple h5 {
   margin-left: 10px;
+  display: block;
 }
 
 .add-links {
   color: #1a0dad;
 }
+
+.apple-text {
+  padding-left: 10px;
+}
+
+#science-text {
+  display: block;
+  margin-top: 16px;
+}
+
+.not-first {
+  margin-top: 25px;
+}
+
