Added Grid for family info in search result.

--- a/css/styles.css
+++ b/css/styles.css
@@ -348,3 +348,11 @@ strong {
   margin-top: 25px;
 }
 
+#family-info {
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(2, 1fr);
+grid-column-gap: 0px;
+grid-row-gap: 3px;
+padding-bottom: 3px;
+}
