--- a/css/styles.css
+++ b/css/styles.css
@@ -356,5 +356,26 @@ grid-column-gap: 3px;
 grid-row-gap: 3px;
 padding-bottom: 3px;
 width: 600px;
+}
 
+#grid-related {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 3px;
+  grid-row-gap: 0px;
+  padding-bottom: 3px;
+  width: 300px;
+}
+
+#grid-related a {
+  color: #1a0dad;
+}
+
+#searchPage h2 {
+  padding-bottom: 8px;
+  font-size: 20px;
+  line-height: 1.3;
+  color: #000;
+  padding: 16px 0px 6px 0px;
 }
