--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,6 @@ h2 {
 
 .foot-list {
   color: rgba(0,0,0,.54);
-  border-top: 0.5px ridge rgba(0,0,0,.54);
 }
 
 footer {
@@ -364,8 +363,9 @@ width: 600px;
   grid-template-rows: repeat(4, 1fr);
   grid-column-gap: 3px;
   grid-row-gap: 0px;
-  padding-bottom: 3px;
+  padding-bottom: 30px;
   width: 300px;
+  
 }
 
 #grid-related a {
@@ -378,4 +378,14 @@ width: 600px;
   line-height: 1.3;
   color: #000;
   padding: 16px 0px 6px 0px;
+}
+
+#Location-foot {
+  margin-left: 150px;
+}
+
+#searchPage .div-nav {
+  font-size: 14px;
+  margin: 0px;
+  padding-bottom: 16px;
 }
